--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +10,86 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+
+.header1 {
+  font-family: var(--font-family-headers);
+  font-size: 76.29px;
+  color: var(--color-primary-black);
+}
+
+.header2 {
+  font-family: var(--font-family-headers);
+  font-size: 61.04px;
+  color: var(--color-primary-black);
+}
+
+.header3 {
+  font-family: var(--font-family-headers);
+  font-size: 48.83px;
+  color: var(--color-primary-black);
+}
+
+.header4 {
+  font-family: var(--font-family-headers);
+  font-size: 39.06px;
+  color: var(--color-primary-black);
+}
+
+.large-bold {
+  font-family: var(--font-family-headers);
+  font-size: 25px;
+  font-weight: bold;
+  color: var(--color-primary-black);
+}
+
+.large {
+  font-family: var(--font-family-headers);
+  font-size: 25px;
+  color: var(--color-primary-black);
+}
+
+.regular-bold {
+  font-family: var(--font-family-headers);
+  font-size: 20px;
+  font-weight: bold;
+  color: var(--color-primary-black);
+}
+
+.regular {
+  font-family: var(--font-family-headers);
+  font-size: 20px;
+  color: var(--color-primary-black);
+}
+
+.small-bold {
+  font-family: var(--font-family-headers);
+  font-size: 16px;
+  font-weight: bold;
+  color: var(--color-primary-black);
+}
+
+.small {
+  font-family: var(--font-family-headers);
+  font-size: 16px;
+  color: var(--color-primary-black);
+}
+
+.tiny {
+  font-family: var(--font-family-headers);
+  font-size: 12px;
+  color: var(--color-primary-black);
+}
+
+:root {
+  --font-family-headers: "Raleway";
+  --font-family-text: "Poppins";
+
+  --color-heading-dark: #1C3103;
+  --color-light-accent-yellow: #FCF186;
+  --color-light-accent-green: #9CAA64;
+  --color-primary-black: #191919;
+  --color-secondary-black: #404040;
+  --color-yellow-accent: #F0AF01;
+  --color-background: #F9F6F2;
 }
