--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,16 +1,8 @@
-/* body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+background-color {
+  color: var(--color-background);
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-} */
 
 .header1 {
   font-family: var(--font-family-headers);
@@ -37,53 +29,53 @@ code {
 }
 
 .large-bold {
-  font-family: var(--font-family-headers);
+  font-family: var(--font-family-text);
   font-size: 25px;
   font-weight: bold;
   color: var(--color-primary-black);
 }
 
 .large {
-  font-family: var(--font-family-headers);
+  font-family: var(--font-family-text);
   font-size: 25px;
   color: var(--color-primary-black);
 }
 
 .regular-bold {
-  font-family: var(--font-family-headers);
+  font-family: var(--font-family-text);
   font-size: 20px;
   font-weight: bold;
   color: var(--color-primary-black);
 }
 
 .regular {
-  font-family: var(--font-family-headers);
+  font-family: var(--font-family-text);
   font-size: 20px;
   color: var(--color-primary-black);
 }
 
 .small-bold {
-  font-family: var(--font-family-headers);
+  font-family: var(--font-family-text);
   font-size: 16px;
   font-weight: bold;
   color: var(--color-primary-black);
 }
 
 .small {
-  font-family: var(--font-family-headers);
+  font-family: var(--font-family-text);
   font-size: 16px;
   color: var(--color-primary-black);
 }
 
 .tiny {
-  font-family: var(--font-family-headers);
+  font-family: var(--font-family-text);
   font-size: 12px;
   color: var(--color-primary-black);
 }
 
 :root {
-  --font-family-headers: "Raleway";
-  --font-family-text: "Poppins";
+  --font-family-headers: "Raleway", sans-serif;
+  --font-family-text: 'Poppins', sans-serif;
 
   --color-heading-dark: #1C3103;
   --color-light-accent-yellow: #FCF186;
