--- a/app/src/organisms/navBar/navBar.css
+++ b/app/src/organisms/navBar/navBar.css
@@ -1,5 +1,43 @@
-.container {
-    height: 20px;
-    width: 20px;
-    color: var(--color-heading-dark);
+.navbar-container {
+    display: flex;
+    width: 100%;
+    height: 70px;
+    position: fixed;
+    top: 0;
+    left: 0;
+  
+    /* justify-content: space-between; */
+    align-items: center;
+    flex-direction: row;
+  
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+}
+
+.navbar-wrapper {
+    display: flex;
+    width: 100%;
+  
+    /* align-items: center; */
+    justify-content: space-between;
+    flex-direction: row;
+    column-gap: 100px;
+    padding: 40px;
+}
+
+.navbar-left {
+    display: flex;
+    width: 80%;
+    align-items: center;
+}
+
+.navbar-right {
+    display: flex;
+    width: 20%;
+
+    align-items: center;
+    text-align: center;
+    column-gap: 30px;
+    justify-content: flex-end;
+    /* padding-right: 0px;
+    margin-right: 0px; */
 }
