--- a/app/src/organisms/cardListing/cardListing.css
+++ b/app/src/organisms/cardListing/cardListing.css
@@ -2,6 +2,10 @@ body {
     padding-top: 100px;
 }
 
+.add-padding {
+    padding: 20px;
+}
+
 .img-div {
     margin: 0;
     padding: 0;
@@ -11,8 +15,27 @@ body {
 .middle-section {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     height: 100%;
-    
+}
+
+/* .name-loc-section {
+    padding: 10px 0;
+} */
+
+.right-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    justify-content: space-between;
+    padding-bottom: 30px;
+}
+
+
+.price-section {
+    text-align: center;
+    /* padding: 10px; */
 }
 
 /* accommodation elements */
@@ -29,10 +52,6 @@ body {
     left: 3px;
 }
 
-.accommodation-desc {
-    margin-top: auto;
-}
-
 .card-listing {
     margin: 0;
     padding: 0;
@@ -41,4 +60,8 @@ body {
     background: rgba(217, 217, 217, 0.4);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 20px;
+}
+
+.reviews {
+ font-size: 25px;
 }
