--- a/app/src/pages/listing/listing.css
+++ b/app/src/pages/listing/listing.css
@@ -3,3 +3,14 @@
     margin: 0;
     padding: 0;
 }
+
+.list-page-main-div {
+    height: 100%;
+}
+
+.cardlist-flex {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 70px;
+}
