--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 background-color {
   color: var(--color-background);
 }
@@ -45,7 +46,7 @@ background-color {
   font-family: var(--font-family-text);
   font-size: 20px;
   font-weight: bold;
-  color: var(--color-primary-black);
+  color: var(--color-heading-dark);
 }
 
 .regular {
@@ -73,6 +74,9 @@ background-color {
   color: var(--color-primary-black);
 }
 
+.italic{
+  font-style: italic;
+}
 :root {
   --font-family-headers: "Raleway", sans-serif;
   --font-family-text: 'Poppins', sans-serif;
