--- a/app/src/organisms/navBar/navBar.css
+++ b/app/src/organisms/navBar/navBar.css
@@ -5,12 +5,19 @@
     position: fixed;
     top: 0;
     left: 0;
+
+    z-index: 1;
   
     /* justify-content: space-between; */
     align-items: center;
+    justify-content: center;
     flex-direction: row;
   
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+}
+
+p {
+    margin: 0;
 }
 
 .navbar-wrapper {
@@ -40,4 +47,18 @@
     justify-content: flex-end;
     /* padding-right: 0px;
     margin-right: 0px; */
+}
+
+.login-btn {
+    background-color: var(--color-light-accent-green);
+    min-width: 90px;
+    border: none;
+    cursor: pointer;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+
+}
+
+.login-btn:focus, .login-btn:hover, .login-btn:active, .login-btn:visited{
+    background-color: var(--color-light-accent-green) !important;
+    color: var(--color-background);
 }
