--- a/app/src/organisms/banner/banner.css
+++ b/app/src/organisms/banner/banner.css
@@ -5,7 +5,7 @@
     width: 100%;
     height: 500px;
     z-index: -1;
-    position: fixed;
+    /* position: fixed; */
 
     align-items: center;
     justify-content: center;
