--- a/app/src/molecules/apartment/apartment.css
+++ b/app/src/molecules/apartment/apartment.css
@@ -1,4 +1,4 @@
-.sample-container {
+.apartment-carousel-container {
     display: flex;
     width: 100%;
 
@@ -7,6 +7,7 @@
     justify-content: center;
     align-items: center;
 }
+
 .carousel-container{
     display: flex;
     flex-direction: column;
