--- a/app/src/organisms/cardListing/cardListing.css
+++ b/app/src/organisms/cardListing/cardListing.css
@@ -2,9 +2,36 @@ body {
     padding-top: 100px;
 }
 
+/* prestyles */
+
+.accom-name {
+    color: var(--color-heading-dark);
+}
+
+.accom-desc {
+    width: 384px;
+}
+
+.review-stars {
+    display: inline-block;
+    font-size: 25px;
+}
+
+.review-num {
+    display: inline-block;
+    font-size: 15px;
+}
+
+.price-range {
+    color: var(--color-secondary-black);
+}
+
+
 .add-padding {
     padding: 20px;
 }
+
+/* divs */
 
 .img-div {
     margin: 0;
@@ -24,6 +51,8 @@ body {
 } */
 
 .right-section {
+    flex: 1;
+
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -31,7 +60,6 @@ body {
     justify-content: space-between;
     padding-bottom: 30px;
 }
-
 
 .price-section {
     text-align: center;
@@ -53,15 +81,13 @@ body {
 }
 
 .card-listing {
+    display: flex;
     margin: 0;
     padding: 0;
-    width: 1135px;
-    height: 299px;
+    width: 1135px; 
+    height: 299px; 
     background: rgba(217, 217, 217, 0.4);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 20px;
-}
-
-.reviews {
- font-size: 25px;
+    /* flex-wrap: wrap; */
 }
