--- a/app/src/organisms/navBar/navBar.css
+++ b/app/src/organisms/navBar/navBar.css
@@ -2,7 +2,7 @@
     display: flex;
     width: 100%;
     height: 70px;
-    /* position: fixed; */
+    position: fixed;
     top: 0;
     left: 0;
 
