--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,38 +1,87 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+background-color {
+  color: var(--color-background);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header1 {
+  font-family: var(--font-family-headers);
+  font-size: 76.29px;
+  color: var(--color-primary-black);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header2 {
+  font-family: var(--font-family-headers);
+  font-size: 61.04px;
+  color: var(--color-primary-black);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.header3 {
+  font-family: var(--font-family-headers);
+  font-size: 48.83px;
+  color: var(--color-primary-black);
 }
 
-.App-link {
-  color: #61dafb;
+.header4 {
+  font-family: var(--font-family-headers);
+  font-size: 39.06px;
+  color: var(--color-primary-black);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.large-bold {
+  font-family: var(--font-family-text);
+  font-size: 25px;
+  font-weight: bold;
+  color: var(--color-primary-black);
+}
+
+.large {
+  font-family: var(--font-family-text);
+  font-size: 25px;
+  color: var(--color-primary-black);
+}
+
+.regular-bold {
+  font-family: var(--font-family-text);
+  font-size: 20px;
+  font-weight: bold;
+  color: var(--color-primary-black);
+}
+
+.regular {
+  font-family: var(--font-family-text);
+  font-size: 20px;
+  color: var(--color-primary-black);
+}
+
+.small-bold {
+  font-family: var(--font-family-text);
+  font-size: 16px;
+  font-weight: bold;
+  color: var(--color-primary-black);
+}
+
+.small {
+  font-family: var(--font-family-text);
+  font-size: 16px;
+  color: var(--color-primary-black);
+}
+
+.tiny {
+  font-family: var(--font-family-text);
+  font-size: 12px;
+  color: var(--color-primary-black);
+}
+
+:root {
+  --font-family-headers: "Raleway", sans-serif;
+  --font-family-text: "Poppins", sans-serif;
+
+  --color-heading-dark: #1c3103;
+  --color-light-accent-yellow: #fcf186;
+  --color-light-accent-green: #9caa64;
+  --color-primary-black: #191919;
+  --color-secondary-black: #404040;
+  --color-yellow-accent: #f0af01;
+  --color-background: #f9f6f2;
 }
