--- a/app/src/organisms/navBar/navBar.css
+++ b/app/src/organisms/navBar/navBar.css
@@ -1,43 +1,75 @@
 .navbar-container {
-    display: flex;
-    width: 100%;
-    height: 70px;
-    position: fixed;
-    top: 0;
-    left: 0;
-  
-    /* justify-content: space-between; */
-    align-items: center;
-    flex-direction: row;
-  
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+  z-index: 1;
+  display: flex;
+  width: 100%;
+  height: 70px;
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  /* justify-content: space-between; */
+  align-items: center;
+  flex-direction: row;
+  background-color: #1c3103;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
 }
 
 .navbar-wrapper {
-    display: flex;
-    width: 100%;
-  
-    /* align-items: center; */
-    justify-content: space-between;
-    flex-direction: row;
-    column-gap: 100px;
-    padding: 40px;
+  display: flex;
+  width: 100%;
+
+  /* align-items: center; */
+  justify-content: space-between;
+  flex-direction: row;
+  column-gap: 100px;
+  padding: 40px;
 }
 
 .navbar-left {
-    display: flex;
-    width: 80%;
-    align-items: center;
+  display: flex;
+  width: 80%;
+  align-items: center;
 }
 
 .navbar-right {
-    display: flex;
-    width: 20%;
+  display: flex;
+  width: 20%;
 
-    align-items: center;
-    text-align: center;
-    column-gap: 30px;
-    justify-content: flex-end;
-    /* padding-right: 0px;
+  align-items: center;
+  text-align: center;
+  column-gap: 30px;
+  justify-content: flex-end;
+  /* padding-right: 0px;
     margin-right: 0px; */
+}
+
+.button-18 {
+  align-items: center;
+  background: var(--color-light-accent-green);
+  border: 0;
+  border-radius: 100px;
+  box-sizing: border-box;
+  color: var(--color-background);
+  cursor: pointer;
+  font-family: var(--font-family-text);
+  font-size: 14px;
+  justify-content: center;
+  /* line-height: 20px; */
+  max-width: 155px;
+  min-width: 155x;
+  height: 35px;
+  /* overflow: hidden; */
+  padding-left: 20px;
+  padding-right: 20px;
+  text-align: center;
+  /* touch-action: manipulation; */
+  transition: background-color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s,
+    box-shadow 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s,
+    color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s;
+}
+
+.button-18:hover,
+.button-18:focus {
+  background-color: var(--color-heading-dark);
+  color: #ffffff;
 }
