--- a/app/src/organisms/multilayer_filter/multilayer_filter.css
+++ b/app/src/organisms/multilayer_filter/multilayer_filter.css
@@ -90,12 +90,14 @@
   border-bottom: none;
 }
 
-div.mb-3{
+.mb-3{
   display: flex;
   flex-direction: column;
 
   justify-content: flex-start;
   align-items: flex-start;
+
+  margin-bottom: 0;
 }
 
 .InElbi {
@@ -120,7 +122,7 @@ div.mb-3{
   padding: 10px;
 }
 
-.filter-dropdown{
+.small.filter-dropdown{
   display: flex;
   flex-direction: row;
   column-gap: 10px;
@@ -131,3 +133,21 @@ div.mb-3{
   border: none;
   width: 150px;
 }
+
+.carousel-btn.btn {
+  background-color: var(--color-light-accent-green);
+  color: var(--color-background);
+  min-width: 90px;
+  border: none;
+  cursor: pointer;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+
+}
+
+.carousel-btn.btn:focus, .carousel-btn.btn:hover, .carousel-btn.btn:active, .carousel-btn.btn:visited{
+  background-color: var(--color-heading-dark) !important;
+  color: var(--color-background);
+  border:none;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
