--- a/app/src/pages/landlord_profile/LandlordProfile.css
+++ b/app/src/pages/landlord_profile/LandlordProfile.css
@@ -1,4 +1,60 @@
-@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+.body-container {
+  display: flex;
+  flex-direction: column;
+
+  padding: 20px;
+  margin-top: 100px;
+}
+
+.profileImage {
+  width: 250px;
+}
+
+.icon {
+  color: var(--color-light-accent-green);
+  width: 35px;
+  height: 35px;
+}
+
+.icon-add{
+  color: var(--color-light-accent-green);
+  width: 90px;
+  height: 90px;
+}
+
+.info-item {
+  display: flex;
+  flex-direction: row;
+
+  column-gap: 10px;
+  justify-content: center;
+  align-items: center;
+}
+
+.info-item p{
+  margin-bottom: 0px;
+}
+
+.info-items {
+  display: flex;
+  flex-direction: row;
+
+  column-gap: -10px;
+}
+
+.whole-screen {
+  display: flex;
+  position: fixed;
+
+  justify-content: flex-end;
+  align-items: flex-end;
+  
+  width: 85%;
+  height: 70vh;
+
+  z-index: 1;
+}
+/* @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 :root {
@@ -92,4 +148,4 @@ body {
   flex-direction: column;
   align-items: center;
   gap: 70px;
-}
+} */
