--- a/app/src/pages/landlord_profile/LandlordProfile.css
+++ b/app/src/pages/landlord_profile/LandlordProfile.css
@@ -1,3 +1,8 @@
+.landlord-profile-container {
+  display: flex;
+  flex-direction: column;
+}
+
 .body-container {
   display: flex;
   flex-direction: column;
@@ -7,19 +12,13 @@
 }
 
 .profileImage {
-  width: 250px;
+  width: 400px;
 }
 
 .icon {
   color: var(--color-light-accent-green);
   width: 35px;
   height: 35px;
-}
-
-.icon-add{
-  color: var(--color-light-accent-green);
-  width: 90px;
-  height: 90px;
 }
 
 .info-item {
@@ -29,6 +28,8 @@
   column-gap: 10px;
   justify-content: center;
   align-items: center;
+
+  max-width: 300px;
 }
 
 .info-item p{
@@ -39,20 +40,12 @@
   display: flex;
   flex-direction: row;
 
-  column-gap: -10px;
+  justify-content: center;
+  column-gap: 40px;
 }
 
-.whole-screen {
-  display: flex;
-  position: fixed;
-
-  justify-content: flex-end;
-  align-items: flex-end;
-  
-  width: 85%;
-  height: 70vh;
-
-  z-index: 1;
+.info-items {
+  margin-bottom: 40px;
 }
 /* @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
