--- a/app/src/organisms/adminPanel/adminPanel.css
+++ b/app/src/organisms/adminPanel/adminPanel.css
@@ -1,5 +1,7 @@
 .admin-panel-div {
-  margin: 0 15%;
+  margin-top: 100px;
+  padding-left: 100px;
+  padding-right: 100px;
 }
 
 .bloc-tabs {
@@ -10,7 +12,7 @@
   background: var(--color-light-accent-green);
   border-top-left-radius: 10px;
   border-top-right-radius: 20px;
-  color: var(--color-heading-dark);
+  color: var(--color-background);
   padding: 10px;
   text-align: center;
   width: 168px;
@@ -22,7 +24,10 @@
 
 .active-tabs {
   background: var(--color-heading-dark);
-  color: white;
+}
+
+div.tabs.small-bold.active-tabs{
+  color: var(--color-background)
 }
 
 .active-tabs:before {
@@ -35,17 +40,96 @@
 }
 
 .content {
+  display: flex;
+  width: 100%;
   background: white;
   padding: 20px;
-  height: 100%;
   display: none;
 }
 
 .content-tabs {
-  box-sizing: border-box;
+  display: flex;
+  width: 100%;
+  /* box-sizing: border-box; */
   border: 2px solid var(--color-heading-dark);
 }
 
 .active-content {
   display: block;
 }
+
+/* .admin-btns {
+  display: flex;
+  flex-direction: row;
+
+  column-gap: 10px;
+}
+
+.admin-view-btn.btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background-color: var(--color-heading-dark);
+  color: var(--color-background);
+  border: none;
+  cursor: pointer;
+  width: 80px;
+  height: 30px;
+}
+
+.small.admin-view-btn.btn:focus, .admin-view-btn.btn:hover, .admin-view-btn.btn:active, .admin-view-btn.btn:visited{
+  background-color: var(--color-heading-dark) !important;
+  color: var(--color-background);
+}
+
+.admin-edit-btn.btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background-color: transparent;
+  color: var(--color-light-accent-green);
+  border: 1px solid var(--color-light-accent-green);
+  cursor: pointer;
+  width: 80px;
+  height: 30px;
+}
+
+.admin-edit-btn.btn:focus, .admin-edit-btn.btn:hover, .admin-edit-btn.btn:active, .admin-edit-btn.btn:visited{
+  background-color: transparent !important;
+  color: var(--color-light-accent-green);
+  border: 1px solid var(--color-light-accent-green);
+}
+
+thead {
+  background-color: var(--color-heading-dark);
+  padding: 0px;
+}
+
+
+th p.small-bold {
+  margin-bottom: 0px;
+  color: var(--color-background);
+}
+
+div.content {
+  margin-top: -1px;
+  padding: 0px;
+}
+
+thead {
+  margin-top: -1px;
+}
+.admin-action-col {
+  display: flex;
+  flex-grow: 1;
+
+  margin-right: 0px;
+  padding: 0px;
+}
+
+.admin-col {
+  display: flex;
+  flex-grow: 2;
+} */
