--- a/app/src/organisms/cardListing/cardListing.css
+++ b/app/src/organisms/cardListing/cardListing.css
@@ -92,3 +92,10 @@ body {
     border-radius: 20px;
     /* flex-wrap: wrap; */
 }
+
+.heart-button {
+    position: absolute;
+    top: 14px;
+    right: 14px;
+    cursor: pointer;
+}
