--- a/app/src/pages/detailsPage/details.css
+++ b/app/src/pages/detailsPage/details.css
@@ -1,4 +1,4 @@
-.review-section-div {
+/* .review-section-div {
   background: #f9f6f2;
   box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.25);
   border-radius: 0px;
@@ -7,7 +7,7 @@
   padding-left: 10px;
   margin-top: 20px;
   margin-bottom: 100px;
-}
+} */
 /* 
 * {
     box-sizing: border-box;
@@ -15,8 +15,9 @@
     padding: 0;
 } */
 
-.list-page-main-div {
+.detials-page-main-div{
   height: 100%;
+  margin-top: 90px;
 }
 
 /* .rev-comm-card-div{
