--- a/app/src/molecules/admin_viewlandlord/admin_viewlandlord.css
+++ b/app/src/molecules/admin_viewlandlord/admin_viewlandlord.css
@@ -1,3 +1,10 @@
+.no-arrows::-webkit-inner-spin-button,
+.no-arrows::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+
 .modal-dialog {
     display: flex;
     justify-content: center;
