--- a/app/src/molecules/listing_details/review_headers.css
+++ b/app/src/molecules/listing_details/review_headers.css
@@ -12,15 +12,14 @@
     background-color: #E6EBD1;
     /* border-top: 1px solid #1C3103; */
     box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.25);
+    padding: 20px;
 }
 
 .s-add-style{
-    margin-left: 55px;
-    margin-right: 40px;
     margin-top: 30px;
     margin-bottom: 30px;
     width: 110px;
-    height: 30px;
+    height: 50px;
     padding-top:2px;
     padding-bottom: 2px;
     border-radius: 1px;
@@ -32,13 +31,3 @@
     color: #1C3103;
     font-family: var(--font-family-text);
 }
-
-.all{
-    background-color:  #1C3103;
-    color: white;
-}
-
-.s-add-style:hover {
-    background-color: #1C3103;
-    color: white;
-  }
