--- a/app/src/organisms/listing_details/listing_details.css
+++ b/app/src/organisms/listing_details/listing_details.css
@@ -34,20 +34,20 @@
     width: 700px;
 }
 
-.heart-icon-col {
+/* .heart-icon-col {
     display: flex;
     flex-direction: column;
-    /* justify-content: space-between; */
+    /* justify-content: space-between; 
     height: 100%;
     align-items: center;
-}
+} */
 
 
-.heart-icon{
+/* .heart-icon{
     color: #1C3103;
     width: 45px;
     height: auto;
-}
+} */
 
 /* .heart-button{
     color:white;
@@ -84,40 +84,8 @@
     color: #1C3103;
 } */
 
-.r-add-style{
-    /* color:var(--color-light-accent-green); */
-    margin-left: 10px;
-    margin-right: 10px;
-    padding-top: 4px;
-    padding-bottom: 4px;
-    padding-left: 8px;
-    padding-right: 8px;
-    border-radius: 5px;
-    width: 100px;
-    height: auto;
-    align-items: center;
-    background: var(--color-light-accent-green);
-    border: 0;
-    color: var(--color-background);
-    cursor: pointer;
-    font-family: var(--font-family-text);
-    font-size: 14px;
-    justify-content: center;
-}
-
-.r1 {
-    box-shadow:2px 2px 5px rgba(0, 0, 0, 0.4);;
-    background-color: var(--color-heading-dark);
-}
-
-.r-add-style:hover,
-.r-add-style:focus { 
-  background-color: var(--color-heading-dark);
-  color: #ffffff;
-}
-
-
 .star-separator-capacity-div { width: 30em; max-width: 100%;}
 .star-separator-capacity-div p { display: inline-block; padding: 5px; max-width: 50%;}
 /* .two p:nth-child(1) { float:left; }
 .two p:nth-child(2) { float:right; } */
+
