--- a/app/src/molecules/admin_viewlandlord/admin_viewlandlord.css
+++ b/app/src/molecules/admin_viewlandlord/admin_viewlandlord.css
@@ -85,7 +85,7 @@ div.modal-content {
     width: 100px;
 }
 
-.admineditlandlord.btn:focus, .admineditlandlord.btn:hover, .admineditlandlord.btn:active, .admineditlandlord.btn:visited{
+.admineditlandlord.btn:hover{
     background-color: var(--color-heading-dark) !important;
     color: var(--color-background);
 }
@@ -98,7 +98,7 @@ div.modal-content {
     width: 100px;  
 }
 
-.adminsavelandlord.btn:focus, .adminsavelandlord.btn:hover, .adminsavelandlord.btn:active, .adminsavelandlord.btn:visited{
+.adminsavelandlord.btn:hover {
     background-color: transparent!important;
     color: var(--color-heading-dark);
     border: 1px solid var(--color-heading-dark);
@@ -195,6 +195,10 @@ div.modal-content {
     background-color: var(--color-heading-dark);   
 }
 
+.dropdown-item:active {
+    background-color: var(--color-background);
+}
+
 .small.adminviewlandlord-filter-dropdown-item{
     display: flex;
     flex-direction: row;
@@ -227,3 +231,4 @@ div.modal-content {
     justify-content: center;
     align-items: center;
 }
+
