--- a/app/src/pages/home/home.css
+++ b/app/src/pages/home/home.css
@@ -11,3 +11,10 @@
     align-items: center;
     gap: 50px;
 }
+
+.home-carousel-list{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
