--- a/app/src/molecules/hotels/hotels.css
+++ b/app/src/molecules/hotels/hotels.css
@@ -1,4 +1,4 @@
-.hotels-carousel-container {
+div.hotels-carousel-container {
     display: flex;
     width: 100%;
 
@@ -6,6 +6,7 @@
 
     justify-content: center;
     align-items: center;
+    margin: 0px;
 }
 
 .hotels-carousel {
@@ -14,12 +15,14 @@
 
     justify-content: center;
     align-content: center;
+    margin: 0px;
 }
 
 .hotels-carousel-left{
     display: flex;
     width: 35%;
     padding: 20px;
+    margin: 0px;
 
 }
 
@@ -38,5 +41,6 @@
     padding: 20px;
     justify-content: center;
     align-items: flex-start;
+    margin: 0px;
 
 }
