chore: mock data for Home

--- a/app/src/molecules/apartment/apartment.css
+++ b/app/src/molecules/apartment/apartment.css
@@ -16,6 +16,9 @@
     align-content: center;
 }
 
+.apartment-title.large-bold{
+    text-align: left;
+}
 .carousel-lower {
     padding: 20px;
     display: flex;
