debugged admin panel

--- a/app/src/organisms/adminPanel/adminPanel.css
+++ b/app/src/organisms/adminPanel/adminPanel.css
@@ -26,8 +26,8 @@
   background: var(--color-heading-dark);
 }
 
-div.tabs.small-bold.active-tabs{
-  color: var(--color-background)
+div.tabs.small-bold.active-tabs {
+  color: var(--color-background);
 }
 
 .active-tabs:before {
