--- a/app/src/organisms/navBar/navBar.css
+++ b/app/src/organisms/navBar/navBar.css
@@ -2,36 +2,35 @@
   width: 15%;
   height: 15%;
   /* filter: drop-shadow(1px 1px 1px rgb(255, 255, 127.5)); */
-  
 }
 
 .logo:hover {
   /* -webkit-filter: hue-rotate(360deg) saturate(5);
   filter: hue-rotate(360deg) saturate(5); */
   /* fill: red; */
-  filter: brightness(0.50);
+  filter: brightness(0.5);
 }
 
 .navbar-container {
-    display: flex;
-    width: 100%;
-    height: 70px;
-    position: fixed;
-    top: 0;
-    left: 0;
+  display: flex;
+  width: 100%;
+  height: 70px;
+  position: fixed;
+  top: 0;
+  left: 0;
 
-    z-index: 1;
-  
-    /* justify-content: space-between; */
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-  
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+  z-index: 1;
+
+  /* justify-content: space-between; */
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
 }
 
 p {
-    margin: 0;
+  margin: 0;
 }
 
 .navbar-wrapper {
@@ -66,17 +65,24 @@ p {
 }
 
 .login-btn.btn {
-    background-color: var(--color-light-accent-green);
-    min-width: 90px;
-    border: none;
-    cursor: pointer;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-
+  background-color: var(--color-light-accent-green);
+  min-width: 90px;
+  border: none;
+  cursor: pointer;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
-.login-btn.btn:focus, .login-btn.btn:hover, .login-btn.btn:active, .login-btn.btn:visited{
-    background-color: var(--color-heading-dark) !important;
-    color: var(--color-background);
-    border:none;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+.login-btn.btn:focus,
+.login-btn.btn:hover,
+.login-btn.btn:active,
+.login-btn.btn:visited {
+  background-color: var(--color-heading-dark) !important;
+  color: var(--color-background);
+  border: none;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+a {
+  text-decoration: none;
+  color: black;
 }
