--- a/app/src/molecules/landlordTable/landlordTable.css
+++ b/app/src/molecules/landlordTable/landlordTable.css
@@ -18,6 +18,19 @@
   height: 30px;
 }
 
+.admin-delete-btn.btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background-color: #f32013;
+  color: var(--color-background);
+  border: none;
+  cursor: pointer;
+  width: 80px;
+  height: 30px;
+}
+
 .small.admin-view-btn.btn:focus,
 .admin-view-btn.btn:hover,
 .admin-view-btn.btn:active,
