chore clean home css

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -116,3 +116,37 @@ p {
   --color-yellow-accent: #f0af01;
   --color-background: #f9f6f2;
 }
+
+/* ANIMATIONS */
+.shine-div {
+  position: relative;
+  overflow: hidden;
+}
+
+.shine-div::before {
+  content: "";
+  position: absolute;
+  top: -50%;
+  left: -50%;
+  width: 200%;
+  height: 200%;
+  background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.3), transparent);
+  opacity: 0;
+  transition: opacity 0.3s;
+  pointer-events: none;
+}
+
+.shine-div:hover::before {
+  opacity: 1;
+  animation: shine 1s forwards;
+}
+
+@keyframes shine {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+}
