--- a/app/src/organisms/cardListing_addRoom/cardListing_addRoom.css
+++ b/app/src/organisms/cardListing_addRoom/cardListing_addRoom.css
@@ -97,7 +97,7 @@
     color: var(--color-yellow-accent);
 }
 
-.card-listing {
+.card-listing-add-room {
     display: flex;
     margin: 0;
     padding: 0;
