--- a/app/src/pages/devPage/devPage.css
+++ b/app/src/pages/devPage/devPage.css
@@ -50,3 +50,13 @@
     justify-content: center;
     align-items: center;
 }
+
+.team-listb{
+    display: flex;
+    flex-direction: row;
+
+    margin-top: 20px;
+    column-gap: 25px;
+    justify-content: center;
+    align-items: center;
+}
