feat: report UI

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -109,6 +109,7 @@ p {
   --font-family-text: "Poppins", sans-serif;
 
   --color-heading-dark: #1c3103;
+  --color-report: #ff2626;
   --color-light-accent-yellow: #fcf186;
   --color-light-accent-green: #9caa64;
   --color-primary-black: #191919;
