--- a/app/src/organisms/listing_details/listing_details.css
+++ b/app/src/organisms/listing_details/listing_details.css
@@ -30,15 +30,17 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin-right: 0px;
     height: 100%;
-    width: 700px;
+    width: 100%;
+    padding: 20px;
 }
 
-.heart-icon-col {
+.name-icon-list {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     /* justify-content: space-between; */
-    height: 100%;
+    /* height: 100%; */
     align-items: center;
 }
 
@@ -116,6 +118,29 @@
   color: #ffffff;
 }
 
+.listing-details-icons{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    flex-grow: 1;
+}
+
+.report-button.btn.btn-primary{
+    background-color: transparent;
+    border-color: transparent;
+}
+
+.report-icon{
+    width: 45px;
+    height: 45px;
+    margin: 0px;
+    color: var(--color-heading-dark);
+}
+
+svg.icon.report-icon{
+    margin: 0px;
+}
 
 .star-separator-capacity-div { width: 30em; max-width: 100%;}
 .star-separator-capacity-div p { display: inline-block; padding: 5px; max-width: 50%;}
