--- a/app/src/molecules/dorm/dorm.css
+++ b/app/src/molecules/dorm/dorm.css
@@ -12,7 +12,7 @@
     display: flex;
     flex-direction: column;
     width: 250px;
-    height: 500px;
+    height: 600px;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
@@ -29,6 +29,11 @@ transition: transform 0.3s ease;
 transform: scale(1.01);
 }
   
+/* 
+.dorm-btn{
+    justify-self: center;
+    align-items: flex-end;
+} */
 
 .dorm-carousel-card-upper img {
     width: 300px; 
@@ -39,17 +44,19 @@ transform: scale(1.01);
 .dorm-carousel-card-lower{
     display: flex;
     flex-direction: column;
+    /* flex-grow: 1; */
     row-gap: 5px;
-    padding: 10px;
+    padding: 20px;
 }
 
 .dorm-carousel-card-lowest{
     display: flex;
 
-    height: 100%;
-    width: 250px;
-    justify-content: center;
-    align-items: flex-end;
+    /* height: 100px; */
+    /* width: 250px; */
+    /* flex-grow: 1; */
+    justify-self: center;
+    align-self: flex-end;
     padding: 20px;
 }
 
