--- a/app/src/pages/home/home.css
+++ b/app/src/pages/home/home.css
@@ -1,22 +1,29 @@
 .home-container {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .cardlist-flex {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 50px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 50px;
 }
 
-.home-carousel-list{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+.home-carousel-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.reports-btn {
+  justify-content: center;
+  display: flex;
+  margin-top: 25px;
+  padding: 0;
 }
 
 /* .search-list {
