--- a/app/src/organisms/listing_details/listing_details.css
+++ b/app/src/organisms/listing_details/listing_details.css
@@ -41,7 +41,7 @@
     flex-direction: row;
     /* justify-content: space-between; */
     /* height: 100%; */
-
+}
 /* .heart-icon-col {
     display: flex;
     flex-direction: column;
