--- a/app/src/organisms/devTile/devTile.css
+++ b/app/src/organisms/devTile/devTile.css
@@ -29,10 +29,13 @@
 }
 
 .devtile-card-upper img {
-    width: 300px; 
+    width: 300px;
     height: 350px;
     object-fit: cover;
-}
+    object-position: top;
+    margin-top: -50px;
+  }
+  
 
 .devtile-card-lower{
     display: flex;
