--- a/app/src/organisms/adminPanel/adminPanel.css
+++ b/app/src/organisms/adminPanel/adminPanel.css
@@ -39,11 +39,10 @@ div.tabs.small-bold.active-tabs {
   height: 5px;
 }
 
-.content {
+.tcontent {
   display: flex;
   width: 100%;
   background: white;
-  padding: 20px;
   display: none;
 }
 
