--- a/app/src/pages/devPage/devPage.css
+++ b/app/src/pages/devPage/devPage.css
@@ -1,62 +1,58 @@
-.devpage-container{
-    display: flex;
-    flex-direction: column;
+.devpage-container {
+  display: flex;
+  flex-direction: column;
 
-    width: 100%;
+  width: 100%;
 
-
-    /* margin-top: 100px; */
-    /* padding: 20px; */
-
-    justify-content: center;
-    align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .member_section {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 
-    row-gap: 40px;
-    justify-content: center;
-    align-items: center;
-    margin-top: 100px;
-    margin-bottom: 100px;
+  row-gap: 40px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
 
-.header1.bold.light-green{
-    color:var(--color-heading-dark);
-    font-weight: bold;
+.header1.bold.light-green {
+  color: #1c3103 !important;
+  font-weight: bold;
 }
 
-.header3.bold{
-    color:var(--color-heading-dark);
-    font-weight: bold;
+.header3.bold {
+  color: var(--color-heading-dark);
+  font-weight: bold;
 }
 
-.team-members-list{
-    display: flex;
-    flex-direction: column;
+.team-members-list {
+  display: flex;
+  flex-direction: column;
 
-    column-gap: 25px;
-    justify-content: center;
-    align-items: center;
+  column-gap: 25px;
+  justify-content: center;
+  align-items: center;
 }
 
-.team-list{
-    display: flex;
-    flex-direction: row;
+.team-list {
+  display: flex;
+  flex-direction: row;
 
-    column-gap: 25px;
-    justify-content: center;
-    align-items: center;
+  column-gap: 25px;
+  justify-content: center;
+  align-items: center;
 }
 
-.team-listb{
-    display: flex;
-    flex-direction: row;
+.team-listb {
+  display: flex;
+  flex-direction: row;
 
-    margin-top: 20px;
-    column-gap: 25px;
-    justify-content: center;
-    align-items: center;
+  margin-top: 20px;
+  column-gap: 25px;
+  justify-content: center;
+  align-items: center;
 }
