--- a/app/src/pages/userProfile/userProfile.css
+++ b/app/src/pages/userProfile/userProfile.css
@@ -14,6 +14,11 @@
   --color-background: #f9f6f2;
 }
 
+input {
+  height: 30px;
+  margin-top: 10px;
+}
+
 body {
   background-color: var(--color-background);
 }
