--- a/app/src/molecules/addAccoms/addAccoms.css
+++ b/app/src/molecules/addAccoms/addAccoms.css
@@ -1,60 +1,94 @@
 .add-accoms-container {
-    display: flex;
-    flex-direction: column;
-    row-gap: 15px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 15px;
 
-    padding: 20px;
-    justify-content: center;
-    align-self: center;
+  padding: 20px;
+  justify-content: center;
+  align-self: center;
 
-    width: 100%;
-    margin: 0px;
+  width: 100%;
+  margin: 0px;
 }
 
 p.large-bold {
-    margin-bottom: 0px;
-    text-align: center;
+  margin-bottom: 0px;
+  text-align: center;
 }
 
 .input-item {
-    width: 100%;
+  width: 100%;
 
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 
-    justify-content: center;
-    align-items: center;
-    margin-left: 5px;
+  justify-content: center;
+  align-items: center;
+  margin-left: 5px;
 }
 
 p.small.light-green {
-    margin-bottom: 0px;
+  margin-bottom: 0px;
 }
 
 Container p.large-bold {
-    text-align: center;
+  text-align: center;
 }
 
-
 .input-add-accoms {
-    border:1px solid var(--color-light-accent-green);
-    width: 260px;
-    border-radius: 25px;
+  border: 1px solid var(--color-light-accent-green);
+  width: 380px;
+  border-radius: 25px;
 }
 
 p.small.light-green {
-    color: var(--color-light-accent-green);
+  color: var(--color-light-accent-green);
 }
 
-.add-accoms-btn.btn{
-    background-color: var(--color-light-accent-green);
-    border: none;
-    cursor: pointer;
-    width: 50%;
-    margin-top: 20px;
+.add-accoms-btn.btn {
+  background-color: var(--color-light-accent-green);
+  border: none;
+  cursor: pointer;
+  width: 50%;
+  margin-top: 20px;
 }
 
-.add-accoms-btn.btn:focus, .add-accoms-btn.btn:hover, .add-accoms-btn.btn:active, .add-accoms-btn.btn:visited{
-background-color: var(--color-light-accent-green) !important;
-color: var(--color-background);
+.add-accoms-btn.btn:focus,
+.add-accoms-btn.btn:hover,
+.add-accoms-btn.btn:active,
+.add-accoms-btn.btn:visited {
+  background-color: var(--color-light-accent-green) !important;
+  color: var(--color-background);
+}
+
+.custom-radio .form-check-input[type="radio"] {
+  /* Hide the default radio button */
+  display: none;
+}
+
+.custom-radio .form-check-input[type="radio"] + .form-check-label:before {
+  /* Define the custom radio button */
+  content: "";
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  margin-right: 5px;
+  margin-left: -15px;
+  border: 2px solid var(--color-secondary-black); /* Border color for unchecked state */
+  border-radius: 50%;
+  cursor: pointer;
+  color: var(--color-background);
+}
+
+.custom-radio
+  .form-check-input[type="radio"]:checked
+  + .form-check-label:before {
+  /* Styles for the checked radio button */
+  background-color: var(
+    --color-light-accent-green
+  ); /* Fill color for checked state */
+  border-color: var(
+    --color-light-accent-green
+  ); /* Border color for checked state */
+  color: var(--color-background);
 }
