chore: Update Landlord Profile UI

--- a/app/src/pages/landlord_profile/LandlordProfile.css
+++ b/app/src/pages/landlord_profile/LandlordProfile.css
@@ -47,6 +47,25 @@
 .info-items {
   margin-bottom: 40px;
 }
+
+.header4.addAccoms{
+  font-weight: bold;
+  color: var(--color-heading-dark);
+}
+
+.noUnits{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+
+  justify-content: center;
+  align-items: center;
+}
+
+.noUnits img{
+  width: 40%;
+  height: 100%;
+}
 /* @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
