--- a/app/src/molecules/addAccoms/addAccoms.css
+++ b/app/src/molecules/addAccoms/addAccoms.css
@@ -1,3 +1,8 @@
+div.addAccomsModal.modal-body{
+  display: flex;
+  width: 700px;
+}
+
 .add-accoms-container {
   display: flex;
   flex-direction: column;
@@ -9,6 +14,10 @@
 
   width: 100%;
   margin: 0px;
+}
+
+div.col-4{
+  width: 20%;
 }
 
 p.large-bold {
@@ -27,8 +36,9 @@ p.large-bold {
   margin-left: 5px;
 }
 
-p.small.light-green {
+p.small.light-green.addAccoms {
   margin-bottom: 0px;
+  width: 30px;
 }
 
 Container p.large-bold {
@@ -37,7 +47,7 @@ Container p.large-bold {
 
 .input-add-accoms {
   border: 1px solid var(--color-light-accent-green);
-  width: 380px;
+  width: 100%;
   border-radius: 25px;
 }
 
