chore: logout redirect to home

--- a/app/src/molecules/login/login.css
+++ b/app/src/molecules/login/login.css
@@ -95,7 +95,7 @@ p.large-bold {
 .login-btn.btn:active, 
 .login-btn.btn:visited{
     background-color: var(--color-light-accent-green) !important;
-    color: var(--color-background) m !important;
+    color: var(--color-background) !important;
 }
 
 button.signup-btn.btn.btn-primary:focus,
