Fix: Changed URL for chat

--- a/app/src/pages/chatPage/styles.module.css
+++ b/app/src/pages/chatPage/styles.module.css
@@ -65,7 +65,7 @@ B13C3F - red
     padding: 12px;
   }
   .msgMeta {
-    color: rgb(153, 217, 234);
+    color: #1C3103;
     font-size: 0.75rem;
   }
   .msgText {
