--- a/app/src/pages/home/home.css
+++ b/app/src/pages/home/home.css
@@ -52,6 +52,9 @@ p.header4.noResultText{
   max-height: 100%;
 }
 
+.centeredSpinner{
+  
+}
 /* .search-list {
     display: flex;
     flex-direction: column;
