chore: clean home ui

--- a/app/src/molecules/apartment/apartment.css
+++ b/app/src/molecules/apartment/apartment.css
@@ -31,12 +31,12 @@
 .carousel-lowerleft {
     display: flex;
     flex-direction: column;
-
+    min-width: 500px;
     align-content: flex-start;
 }
 
 .carousel-lowerleft p {
-    max-width: 600px;
+    max-width: 400px;
 }
 
 .carousel-lowerright {
